# restapi/operations/containers/list_containers_responses.go
@@ -1,0 +1,119 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package containers
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/bensallen/rbd/models"
+)
+
+// ListContainersOKCode is the HTTP code returned for type ListContainersOK
+const ListContainersOKCode int = 200
+
+/*ListContainersOK List of containers
+
+swagger:response listContainersOK
+*/
+type ListContainersOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload []*models.Container `json:"body,omitempty"`
+}
+
+// NewListContainersOK creates ListContainersOK with default headers values
+func NewListContainersOK() *ListContainersOK {
+
+	return &ListContainersOK{}
+}
+
+// WithPayload adds the payload to the list containers o k response
+func (o *ListContainersOK) WithPayload(payload []*models.Container) *ListContainersOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the list containers o k response
+func (o *ListContainersOK) SetPayload(payload []*models.Container) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ListContainersOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = make([]*models.Container, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+/*ListContainersDefault error
+
+swagger:response listContainersDefault
+*/
+type ListContainersDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewListContainersDefault creates ListContainersDefault with default headers values
+func NewListContainersDefault(code int) *ListContainersDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &ListContainersDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the list containers default response
+func (o *ListContainersDefault) WithStatusCode(code int) *ListContainersDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the list containers default response
+func (o *ListContainersDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the list containers default response
+func (o *ListContainersDefault) WithPayload(payload *models.Error) *ListContainersDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the list containers default response
+func (o *ListContainersDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ListContainersDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
