# restapi/operations/delete_container_responses.go
@@ -1,0 +1,96 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/bensallen/rbd/models"
+)
+
+// DeleteContainerNoContentCode is the HTTP code returned for type DeleteContainerNoContent
+const DeleteContainerNoContentCode int = 204
+
+/*DeleteContainerNoContent Container deleted
+
+swagger:response deleteContainerNoContent
+*/
+type DeleteContainerNoContent struct {
+}
+
+// NewDeleteContainerNoContent creates DeleteContainerNoContent with default headers values
+func NewDeleteContainerNoContent() *DeleteContainerNoContent {
+
+	return &DeleteContainerNoContent{}
+}
+
+// WriteResponse to the client
+func (o *DeleteContainerNoContent) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(204)
+}
+
+/*DeleteContainerDefault error
+
+swagger:response deleteContainerDefault
+*/
+type DeleteContainerDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewDeleteContainerDefault creates DeleteContainerDefault with default headers values
+func NewDeleteContainerDefault(code int) *DeleteContainerDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &DeleteContainerDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the delete container default response
+func (o *DeleteContainerDefault) WithStatusCode(code int) *DeleteContainerDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the delete container default response
+func (o *DeleteContainerDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the delete container default response
+func (o *DeleteContainerDefault) WithPayload(payload *models.Error) *DeleteContainerDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete container default response
+func (o *DeleteContainerDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeleteContainerDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
