# swagger.yml
@@ -179,6 +179,68 @@ definitions:
           type: integer
           format: int64
 
+  mount:
+    description: Generically address mounts by kind and ID
+    type: object
+    required:
+      - kind
+      - id
+    properties:
+      id:
+        type: integer
+        format: int64
+      kind:
+        type: string
+        enum: [ "overlay", "rbd" ]
+
+
+  container_namespace:
+    description: Linux namespace
+    type: string
+    enum: [ "cgroup", "ipc", "net", "mnt", "pid", "time", "user", "uts" ]
+
+  container_state:
+    description: Valid container states
+    type: string
+    # stolen straight from docker (even if we don't use them all)
+    enum: [ "created",  "running", "restarting", "paused", "exited", "dead" ]
+
+  container:
+    description: The `container` option describes a minimally namespaced container.
+    type: object
+    required:
+      - mount
+      - command
+    properties:
+      # internal
+      id:
+        type: integer
+        format: int64
+        readOnly: true
+      logfile:
+        type: string
+        readOnly: true
+      # external
+      mount:
+        $ref: "#/definitions/mount"
+      command:
+        type: string
+      state:
+        description: |
+          When read, this contains the current container state.
+          On creation, this requests the initial state (valid options: `created` or `running`).
+          The default is `created`.
+        $ref: "#/definitions/container_state"
+        enum: [ "created",  "running", "restarting", "paused", "exited", "dead" ]
+      namespaces:
+        description: |
+          A list of Linux namespaces to use.
+
+          Note: This is currently unused.  All containers currently get `mnt` and `pid`.
+                It's here as a placeholder for future use.
+        type: array
+        items:
+          $ref: "#/definitions/container_namespace"
 
   error:
     type: object
@@ -402,3 +464,97 @@ paths:
           description: error
           schema:
             $ref: "#/definitions/error"
+  
+  /container:
+    get:
+      tags:
+        - containers
+      description: Get a list of containers
+      operationId: list_containers
+      responses:
+        200:
+          description: List of containers
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/container"
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/error"
+
+    post:
+      tags:
+        - containers
+      description: Create a container
+      operationId: create_container
+      responses:
+        201:
+          description: Container creation succeed
+          schema:
+            $ref: "#/definitions/container"
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/error"
+
+  /container/{id}:
+    parameters:
+      - type: integer
+        format: int64
+        name: id
+        in: path
+        required: true
+
+    get:
+      description: Get a container definition
+      operationId: get_container
+      responses:
+        200:
+          description: Container entry
+          schema:
+            $ref: "#/definitions/container"
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/error"
+
+    delete:
+      description: |
+        Delete a container defition.  
+        This will stop running containers.
+      operationId: delete_container
+      responses:
+        204:
+          description: Container deleted
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/error"
+
+  /container/{id}/{state}:
+    parameters:
+      - type: integer
+        format: int64
+        name: id
+        in: path
+        required: true
+      - type: string
+        enum: [ "running", "exited" ]
+        in: path
+        name: state
+        required: true
+
+    get:
+      description: |
+        Request a (valid) state for a container. 
+        Valid states to request include: `running`, `exited`, `paused` (paused is not yet implemented)
+      operationId: set_container_state
+      responses:
+        200:
+          description: Container state changed
+          schema:
+            $ref: "#/definitions/container"
+        default:
+          description: error
+          schema:
